# rustqueue

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PRD.md  README.md  ROADMAP.md  docker-compose.monitoring.yml  docker-compose.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
benches/: throughput.rs
dashboard/static/: app.js  blog-background-jobs-without-redis.html  blog-crash-safe-email-queue.html  examples.html  index.html  landing.css  landing.html  production.html  style.css
deploy/: grafana-dashboards.yml  prometheus.yml
docs/: benchmark-v0.2.0.md  blog-examples.md  competitor-benchmark-2026-02-06-eventual.json  competitor-benchmark-2026-02-06-eventual.md  competitor-benchmark-2026-02-06-immediate-r2-latest.json  competitor-benchmark-2026-02-06-immediate-r2-latest.md  competitor-benchmark-2026-02-06-immediate-r2.json  competitor-benchmark-2026-02-06-immediate-r2.md  competitor-benchmark-2026-02-06-immediate-remove-on-complete-r2-latest.json  competitor-benchmark-2026-02-06-immediate-remove-on-complete-r2-latest.md  competitor-benchmark-2026-02-06-immediate-remove-on-complete.json  competitor-benchmark-2026-02-06-immediate-remove-on-complete.md  competitor-benchmark-2026-02-06-immediate.json  competitor-benchmark-2026-02-06-immediate.md  competitor-benchmark-2026-02-06-none-r2.json  competitor-benchmark-2026-02-06-none-r2.md  competitor-benchmark-2026-02-06-tcp-batch50-r2.md  competitor-benchmark-2026-02-06.json  competitor-benchmark-2026-02-07.json  competitor-benchmark-2026-02-07.md  competitor-benchmark-2026-03-28.json  competitor-benchmark-2026-03-28.md  competitor-gap-analysis-2026-02-06.md  examples.html  index.html  orchestration-api.md  performance-analysis.md  production.html  production.md  release-checklist-v0.10.md
docs/blog/: background-jobs-without-redis.html  crash-safe-email-queue.html
docs/grafana/: rustqueue-dashboard.json
docs/plans/: 2026-02-05-phase1-foundation.md  2026-02-06-phase3-production-hardening.md  2026-02-06-phase4-schedule-engine.md
docs/superpowers/plans/: 2026-05-22-production-embedded.md
docs/superpowers/specs/: 2026-05-22-production-embedded-design.md
examples/: axum_background_jobs.rs  basic.rs  crash_recovery.rs  email_notifications.rs  persistent.rs  worker.rs
internal/superpowers/plans/: 2026-03-28-blue-ocean-repositioning.md
scripts/: benchmark_competitors.py  celery_bench_app.py  requirements-benchmark.txt  soak_test.py
scripts/node-bench/: bullmq_bench.mjs  package-lock.json  package.json
sdk/go/: README.md  go.mod
sdk/go/examples/http_producer/: main.go
sdk/go/examples/tcp_worker/: main.go
sdk/go/rustqueue/: client.go  client_test.go  errors.go  options.go  tcp_client.go  types.go
sdk/node/: README.md  package.json  tsconfig.json
sdk/node/examples/: basic-worker.ts
sdk/node/src/: errors.ts  http-client.ts  index.ts  node-types.d.ts  tcp-client.ts  types.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_worker.py
sdk/python/rustqueue/: __init__.py  client.py  errors.py
src/: axum_integration.rs  builder.rs  housekeeping.rs  lib.rs  main.rs  metrics_registry.rs  worker.rs
src/api/: auth.rs  health.rs  jobs.rs  mod.rs  openapi.rs  prometheus.rs  queues.rs  schedules.rs  webhooks.rs  websocket.rs
src/auth/: mod.rs
src/config/: mod.rs
src/dashboard/: mod.rs
src/engine/: error.rs  metrics.rs  mod.rs  models.rs  plugins.rs  queue.rs  rate_limit.rs  scheduler.rs  telemetry.rs  webhook.rs  workflow.rs
src/protocol/: binary.rs  handler.rs  mod.rs
src/storage/: buffered_redb.rs  hybrid.rs  memory.rs  mod.rs  postgres.rs  redb.rs  sqlite.rs
tests/: api_jobs.rs  auth_tests.rs  axum_integration_test.rs  chaos_tests.rs  dag_flow_tests.rs  dashboard_tests.rs  full_lifecycle.rs  graceful_shutdown.rs  job_chaining_tests.rs  library_usage.rs  middleware_tests.rs  openapi_tests.rs  production_smoke.rs  property_tests.rs  schedule_api_tests.rs  schedule_integration.rs  scheduler_integration.rs  server_smoke.rs  storage_backend_tests.rs  tcp_auth_tests.rs  tcp_protocol.rs  webhook_tests.rs  websocket_events.rs  worker_runtime.rs  workflow_plugin_tests.rs
