[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rustqueue"
version = "0.1.0"
description = "Python SDK for RustQueue — background jobs without infrastructure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["queue", "job-scheduler", "rustqueue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ferax564/rustqueue"
Repository = "https://github.com/ferax564/rustqueue"

[tool.setuptools.packages.find]
include = ["rustqueue*"]
